<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan_light"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:id="@+id/tokenText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginEnd="@dimen/standard_padding"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/token_empty"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/token_empty" />

    <TextView
        android:id="@+id/homeMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/home_message"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginEnd="@dimen/standard_padding"
        android:background="@color/red_light"
        android:backgroundTint="@color/red_light"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeMessage" />

    <Button
        android:id="@+id/invalidateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginEnd="@dimen/standard_padding"
        android:background="@color/red_dark"
        app:backgroundTint="@color/red_dark"
        android:text="@string/invalidate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

</androidx.constraintlayout.widget.ConstraintLayout>